--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
+    "@types/date-fns": "^2.6.0",
     "@types/jest": "^26.0.15",
     "@types/lodash-es": "^4.17.4",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "antd": "^4.15.2",
+    "date-fns": "^2.21.1",
     "lodash-es": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
