--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
+    "@testing-library/react-hooks": "^5.1.2",
     "@types/date-fns": "^2.6.0",
     "@types/jest": "^26.0.15",
     "@types/lodash-es": "^4.17.4",
@@ -51,5 +52,10 @@
     "@types/react-router-dom": "^5.1.7",
     "fishery": "^1.2.0",
     "prettier": "^2.2.1"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "<rootDir>/node_modules/(?!lodash-es)"
+    ]
   }
 }
